--- a/HotelRiu/Properties/Resources.resx
+++ b/HotelRiu/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="riuLogin" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagenes\riuLogin.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="perfil" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagenes\Usuario\perfil.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
